fix gap

--- a/src/styles/about.module.scss
+++ b/src/styles/about.module.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
+  gap: 10px;
 
   .CardAbout {
     flex: 0 0 20%;
